--- a/views/order.pug
+++ b/views/order.pug
@@ -1,24 +1,27 @@
 extends layout
 
 block content
-  table.menu
-    tbody      
-      tr
-        th.menu 訂單編號
-        th.menu 客戶名稱
-        th.menu 訂購日期
-        th.menu 數量
-        th.menu 金額
-        th.menu 送貨地址
-        th.menu
-          | 
-      each p in orders
+  if orders
+    table.menu
+      tbody      
         tr
-          td.menu.right= p.id
-          td.menu.left= p.custName
-          td.menu.left= p.orderDate
-          td.menu.right= p.qty
-          td.menu.right= p.total
-          td.menu.left= p.custAddr
-          td.menu
-            a(href="/order/" + p.id) 詳細內容
+          th.menu 訂單編號
+          th.menu 客戶名稱
+          th.menu 訂購日期
+          th.menu 數量
+          th.menu 金額
+          th.menu 送貨地址
+          th.menu
+            | 
+        each p in orders
+          tr
+            td.menu.right= p.id
+            td.menu.left= p.custName
+            td.menu.left= p.orderDate
+            td.menu.right= p.qty
+            td.menu.right= p.total
+            td.menu.left= p.custAddr
+            td.menu
+              a(href="/order/" + p.id) 詳細內容
+  else
+    h2.errorMessage.center 沒有訂單            
