--- a/views/orderDetail.pug
+++ b/views/orderDetail.pug
@@ -1,40 +1,43 @@
 extends layout
 
 block content
-  table.menu
-    tbody
-      tr
-        th.right.empty 訂單編號：
-        th.left.empty(colspan="2")= order.id
-        th.right.empty 日期：
-        th.left.empty(colspan="2")= order.orderDate
-      tr
-        th.right.empty 客戶名稱：
-        th.left.empty(colspan="5")           
-          span(title='客戶帳號：'+order.userId)= order.custName
-      tr
-        th.right.empty 聯絡電話：
-        th.left.empty(colspan="5")= order.custTel
-      tr
-        th.right.empty 送貨地址：
-        th.left.empty(colspan="5")= order.custAddr  
-      tr
-        th.menu 品名
-        th.menu 容量
-        th.menu 單價
-        th.menu 數量
-        th.menu 小計
-        th.menu 備註
-      each p in order.items
+  if order
+    table.menu
+      tbody
         tr
-          td.menu.right= p.name
-          td.menu= p.size
-          td.menu.right= p.price
-          td.menu.right= p.qty
-          td.menu.right= p.sum
-          td.menu.left= p.note
-      tr
-        th.menu.right(colspan="4") 合計：
-        th.menu.right= order.total
-        th.menu 
-          | 
+          th.right.empty 訂單編號：
+          th.left.empty(colspan="2")= order.id
+          th.right.empty 日期：
+          th.left.empty(colspan="2")= order.orderDate
+        tr
+          th.right.empty 客戶名稱：
+          th.left.empty(colspan="5")           
+            span(title='客戶帳號：'+order.userId)= order.custName
+        tr
+          th.right.empty 聯絡電話：
+          th.left.empty(colspan="5")= order.custTel
+        tr
+          th.right.empty 送貨地址：
+          th.left.empty(colspan="5")= order.custAddr  
+        tr
+          th.menu 品名
+          th.menu 容量
+          th.menu 單價
+          th.menu 數量
+          th.menu 小計
+          th.menu 備註
+        each p in order.items
+          tr
+            td.menu.right= p.name
+            td.menu= p.size
+            td.menu.right= p.price
+            td.menu.right= p.qty
+            td.menu.right= p.sum
+            td.menu.left= p.note
+        tr
+          th.menu.right(colspan="4") 合計：
+          th.menu.right= order.total
+          th.menu 
+            | 
+  else
+    h2.errorMessage.center 沒有訂單
